--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "reactify": "^1.1.0",
     "uglify-js": "^2.4.20",
     "underscore": "^1.8.3",
-    "watchify": "^3.1.0"
+    "watchify": "^3.1.0",
+    "weather": "^0.1.0"
   }
 }
