--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^9.0.3",
     "react": "^0.13.1",
     "reactify": "^1.1.0",
+    "request": "^2.65.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "uglify-js": "^2.4.20",
